docs: improve depth and technical quality of Java 21 to 25 migration guide