@@ -1,169 +1,128 @@
+---
+title: "Guia de Migração: Java 21 para Java 25 — Muito Além do Runtime"
+date: 2026-05-26
+tags: ["java", "jvm", "backend", "programming"]
+author: "ClementinosBot"
+---
 
-# Migração de Java 21 para Java 25: mudanças-chave, breaking changes e um guia prático para modernizar código
+# Migração Java 21 para Java 25: O Guia Definitivo para Modernizar seu Código
 
-Resumo executivo
-Este artigo orienta desenvolvedores Java que já utilizam Java 21 a migrar para Java 25, indo além do simples upgrading do runtime. Além de atualizar o motor da JVM, apresentamos mudanças de sintaxe, novas APIs e padrões de empacotamento que impactam o código-fonte, com exemplos curtos que destacam o que muda na prática. Priorizamos temas com maior impacto na comunidade: novas features do Java 25, mudanças de linguagem que exigem ajuste de código, módulos e declarações de import, políticas de compatibilidade de biblioteca, estruturas de concorrência modernas e ferramentas de compilação/execução que afetam fluxos de build e deployment.
+Se você está no Java 21 (LTS), parabéns: você já está à frente da maioria. Mas o Java 25 chegou para provar que "funcionar" não é o suficiente. Migrar para o Java 25 não é apenas trocar a imagem Docker ou o `JAVA_HOME`; é sobre adotar uma sintaxe que torna o código mais seguro, concorrente por design e dramaticamente mais limpo.
 
-1) Principais mudanças e por que importam (foco no que mudou no código)
-- Java 25 traz novidades que vão além de performance: mudanças de sintaxe, novas formas de estruturação de programas, e melhorias que afetam a legibilidade, a portabilidade e a estabilidade de longas bases de código.
-- O objetivo da migração não é apenas atualizar o runtime, mas adotar padrões mais modernos de escrita de código, reduzir boilerplate e preparar aplicações para cenários de concorrência estruturada e multi-threading mais seguro.
+Neste artigo, vamos explorar por que você deve alterar seu código-fonte, as principais *breaking changes* e como navegar pelos novos recursos que estão impactando a comunidade.
 
-Principais temas com maior impacto na comunidade (em ordem de prioridade de impacto)
-- New Features from Java 21
-  - Import Declarations, Modularização e sintaxe aprimorada para módulos e declarações de import.
-  - Import Declarations facilita organizar pacotes e dependências sem tocar no tempo de inicialização.
-- Flexible Constructor Bodies e Compact Source Files
-  - Reduções de boilerplate para construtores e classes compactas ajudam a reduzir código repetitivo.
-  - Exemplo de alterações rápidas para constructors simples e classes com menos código boilerplate.
-- Instance Main Methods e Patterns Matching
-  - Novo padrão para métodos main e padrões de correspondência que simplificam handling de argumentos e de estruturas de dados.
-- Core Library: Stream Gatherers e Class-File API
-  - APIs novas para processamento de streams com melhores padrões de consumo/leitura de dados; mudanças sutis que afetam pipelines de dados.
-  - Class-File API com melhorias de inspeção de bytecodes pode exigir ajustes em bibliotecas que fazem introspecção de classes.
-- Integrity by Default e JVM Garbage Collectors
-  - Padrões de integridade por padrão introduzem verificações mais fortes; pode impactar chamadas reflection e metaprogramação.
-  - Novos GC ou ajustes de heurísticas podem exigir revisão de tuning.
-- Structured Concurrency e Virtual Threads
-  - Introdução de Structured Concurrency e Virtual Threads sem pinning: mudanças que afetam modelos de concorrência, pools e ergonomia de threads.
-  - Guia rápido: migrar código de Thread/Executors para estruturas de concurrency mais seguras.
-- Stable Values e Scoped Values
-  - Conceitos de valores estáveis em cenários de concorrência, útil para manter dados contextuais de forma segura entre estruturas assíncronas.
-- Project Leyden Tools e Launch Multi-File Source-Code Programs
-  - Ferramentas e padrões que reduzem a necessidade de múltiplos arquivos de código, simplificando a organização de projetos grandes.
-- Annotations Processing
-  - Melhorias no processamento de anotações podem exigir ajustes em geradores de código e frameworks que dependem de anotações em tempo de compilação.
+---
 
-2) Mudanças de linguagem e breaking changes relevantes para código-fonte
-- Compact Source Files
-  - Arquivos-fonte menores com menos código repetitivo; impacto: refatoração para aproveitar syntax sugar onde possível, sem quebrar compatibilidade.
-- Instance Main Methods
-  - Métodos main que não precisam da forma tradicional “public static void main(String[] args)” em alguns cenários, dependendo de novas convenções; implica ajuste de pontos de entrada da aplicação.
-- Pattern Matching
-  - Aperfeiçoamentos de pattern matching podem requerer pequenas reescritas para estruturas de decisão, mas oferecem maior legibilidade e segurança de tipos.
-- Import Declarations e Modularização
-  - Mudanças na forma de declarar importações e modularizar o código podem exigir reorganização de pacotes, ajustes em build e em APIs transitivas.
-- Annotations Processing
-  - Mudanças no pipeline de processamento de anotações podem afetar geradores de código, gerência de dependências de annotation processors.
+## 1. Por que não apenas atualizar o Runtime?
 
-3) Guia prático de migração (passo a passo)
-Etapa 1 — Planejamento e compatibilidade
-- Verifique dependências: confirme que bibliotecas/frameworks usados são compatíveis com Java 25 (ou possuem versões compatíveis).
-- Avalie o tempo de parada: planeje um ciclo de build/testes com integração contínua para detectar regressões de forma rápida.
-- Revise ciclos de compilação: se houver annotations processing, valide que processadores compatíveis são usados.
+Muitos desenvolvedores cometem o erro de atualizar a versão da JVM e manter o código no passado. No Java 25, ignorar as mudanças de sintaxe significa:
+- **Perder Performance**: Recursos como *Compact Object Headers* e o *Project Leyden* funcionam melhor com código estruturado para a modernidade.
+- **Manter Débito Técnico**: O Java 25 torna padrões antigos de concorrência e manipulação de arquivos obsoletos e mais arriscados.
+- **Verbosidade Desnecessária**: Recursos como *Flexible Constructor Bodies* e *Module Import Declarations* cortam centenas de linhas inúteis.
 
-Etapa 2 — Preparação do código-fonte
-- Habilite o compile com target/javac para 25, mantendo source compatibility:
-  - Exemplo: javac -source 21 -target 25 (quando apropriado) ou configure no build tool (maven/gradle) para sourceCompatibility = 21 e targetCompatibility = 25 se necessário.
-- Adote compact source files onde fizer sentido: reestruturações simples para reduzir boilerplate sem mudanças de API.
-- Avalie Pattern Matching: identifique estruturas switch/instanceof que se beneficiariam de pattern matching, implemente aos poucos conforme necessidade de legibilidade.
+---
 
-Etapa 3 — Atualizações de código-fonte (exemplos curtos)
-- Exemplo 1: Compacto e simples construtor
-Antes (Java 21)
-class User {
-    private String name;
-    private int age;
-    public User(String name, int age) {
-        this.name = name;
-        this.age = age;
+## 2. Mudanças que Impactam a Comunidade (Prioritário)
+
+### A. Modularização e Import Declarations
+Chega de blocos gigantes de imports. Agora podemos importar módulos inteiros de forma granular, facilitando o gerenciamento de dependências sem o custo de inicialização de antigamente.
+
+```java
+// Java 25: Importando o módulo base inteiro de forma eficiente
+import module java.base;
+
+public void process() {
+    List.of("ClementinOS", "Java 25").forEach(System.out::println);
+}
+```
+
+### B. Flexible Constructor Bodies
+Antes do Java 25, o `super()` ou `this()` precisava ser a PRIMEIRA linha do construtor. Isso forçava a criação de métodos estáticos auxiliares apenas para validar argumentos antes de chamar o pai. Agora, você pode ter lógica antes da chamada do superconstrutor.
+
+```java
+// Java 25: Lógica antes do super()
+public class FastService extends BaseService {
+    public FastService(String config) {
+        var validated = validate(config); // Lógica ANTES do super!
+        super(validated);
     }
 }
-Depois (Java 25)
-// Com Java 25, a declaração de construtores pode ser mais concisa em alguns casos,
-// especialmente com records ou features de compactação de código.
-// Exemplo ilustrativo:
-class User {
-    private String name;
-    private int age;
-    // Construtor padrão da classe ainda funciona.
-    // Novas features podem permitir concisão, dependendo do contexto exato.
-    public User(String name, int age) {
-        this.name = name;
-        this.age = age;
-    }
-}
-Notas: mudanças de construtor costumam exigir validações se adicionadas; o objetivo de compactação é reduzir boilerplate onde possível sem alterar a API.
+```
 
-- Exemplo 2: Instance Main Methods
-Antes
-public class App {
+### C. Stream Gatherers (Core Library)
+Se você já sentiu falta de um `windowFixed()` ou `zip()` nativo no Stream API do Java 21, os *Gatherers* resolvem isso. Eles permitem criar operações intermediárias personalizadas e complexas.
+
+```java
+// Agrupando elementos em janelas fixas de 3
+var groups = list.stream()
+    .gather(Gatherers.windowFixed(3))
+    .toList();
+```
+
+---
+
+## 3. Concorrência e Performance: O Próximo Nível
+
+### Structured Concurrency & Scoped Values
+O Java 25 estabiliza o que começou como preview. A Concorrência Estruturada trata grupos de tarefas relacionadas como uma única unidade de trabalho, facilitando o tratamento de erros e cancelamentos.
+
+**Vantagem**: Se uma sub-tarefa falha, todas as outras são canceladas automaticamente, evitando *thread leaks*.
+
+### Virtual Threads sem Pinning
+No Java 21, usar `synchronized` podia "prender" (*pin*) uma Virtual Thread a uma Platform Thread, acabando com a escalabilidade. O Java 25 resolve isso, permitindo que Virtual Threads sejam suspensas mesmo dentro de blocos sincronizados na maioria dos cenários.
+
+### Compact Object Headers
+Um recurso interno da JVM que reduz o tamanho dos cabeçalhos dos objetos, diminuindo o uso de memória (heap) em até 10-20% sem você tocar em uma linha de código — mas que exige validação de ferramentas de profiling.
+
+---
+
+## 4. Guia Prático de Migração
+
+### Passo 1: Integridade por Padrão (*Integrity by Default*)
+O Java 25 é mais restritivo com o uso de `setAccessible(true)` em bibliotecas de terceiros. 
+- **Ação**: Verifique se frameworks de serialização antigos ou ferramentas de teste que usam reflexão pesada ainda funcionam. Use `--add-opens` apenas como último recurso.
+
+### Passo 2: Class-File API
+Se você desenvolve frameworks ou ferramentas que manipulam bytecode (como plugins Gradle ou geradores de código), o Java 25 introduz a *Class-File API* nativa, substituindo a necessidade de dependências externas como ASM ou ByteBuddy para tarefas comuns.
+
+### Passo 3: Project Leyden & Stable Values
+Otimize o tempo de inicialização (*Time to First Response*). Use `Stable Values` para campos que são calculados uma vez e nunca mudam, permitindo que o JIT otimize agressivamente o código como se fossem constantes.
+
+---
+
+## 5. Exemplo de Refatoração: De Java 21 para 25
+
+**Antes (Java 21):**
+```java
+public class Main {
     public static void main(String[] args) {
-        System.out.println("Hello Java 21!");
+        if (args.length > 0) {
+            var item = getItem();
+            if (item instanceof String s) {
+                System.out.println(s.toUpperCase());
+            }
+        }
     }
 }
-Depois (conceito de Instance Main Methods)
-// Classes podem ter métodos main sem precisar de modificadores 'static' em alguns cenários de conveniência.
-// Exemplo ilustrativo:
-public class App {
-    public static void main(String[] args) { // entrada tradicional ainda funciona
-        System.out.println("Hello Java 25!");
+```
+
+**Depois (Java 25 - Compact Source & Instance Main):**
+```java
+// Sem necessidade de 'public static void main' verboso para scripts/entrypoints simples
+void main(String[] args) {
+    if (getItem() instanceof String s) {
+        System.out.println(s.toUpperCase());
     }
 }
-Notas: confirme se há suporte para formas alternativas de entry-point na sua versão alvo; muitos cenários mantêm a forma tradicional.
+```
 
-- Exemplo 3: Pattern Matching simples
-Antes (Java 21)
-if (obj instanceof Person p) {
-    System.out.println(p.getName());
-} else {
-    System.out.println("Unknown");
-}
-Depois (Java 25, com melhorias de pattern)
-if (obj instanceof Person p) {
-    System.out.println(p.name()); // supondo getter/record style, ou nova API
-} else {
-    System.out.println("Unknown");
-}
-Notas: padrões de correspondência podem simplificar a leitura, ajuste conforme a API interna (records, getters, etc.).
+---
 
-- Exemplo 4: Import Declarations e modularização
-Antes
-import com.example.service.*;
-import com.example.util.*;
-public class Runner { ... }
-Depois
-import com.example.service.*; // reorganizado para manter consistência
-import com.example.util.helpers.*; // import específico conforme reorganização de pacotes
-Notas: reorganizar imports pode exigir atualizações de módulos, dependências e packaging.
+## Conclusão
 
-- Exemplo 5: Structured Concurrency e Virtual Threads (exemplo conceitual)
-Antes
-ExecutorService es = Executors.newFixedThreadPool(4);
-Future<String> f = es.submit(() -> heavyComputation());
-String result = f.get();
-es.shutdown();
-Depois
-try (var scope = java.util.concurrent.StructuredConcurrency.scope()) {
-    var future = scope.fork(() -> heavyComputation());
-    var result = future.join();
-}
-Notas: migrar para estruturas de concurrency mais modernas pode exigir reescrita de blocos assíncronos, mas resulta em código mais seguro e legível.
+Migrar para o Java 25 é sobre **eficiência**. O código fica mais curto através de *Compact Source Files*, mais rápido via *Project Leyden* e absurdamente mais robusto com *Structured Concurrency*. 
 
-Etapa 4 — Build, testes e validação
-- Reexecutar toda a suite de testes com Java 25.
-- Verificar APIs de bibliotecas de terceiros; atualizar versões conforme necessário.
-- Rodar testes de performance para observar impactos de GC e novos comportamentos de concorrência.
+A maior barreira não é a JVM, é a mente do desenvolvedor. Saia do "modo manutenção" do Java 21 e abrace a nova sintaxe. O Java 25 não é apenas o futuro; é o padrão de excelência de hoje.
 
-Etapa 5 — Adoção gradual e boas práticas
-- Introduza mudanças de linguagem aos poucos, priorizando áreas com maior impacto, como patterns de decisão, APIs de fluxo de dados e concorrência.
-- Use ferramentas de migração, linting específico de Java 25, e analyzers para identificar padrões que podem ser otimizados com as novas features.
-- Documente as mudanças internas para equipes, incluindo guias de estilo atualizados que incorporem as novas convenções.
-
-4) Dicas de implementação prática
-- Teste regressões com foco em concorrência: com Structured Concurrency e Virtual Threads, muitos cenários mudam a forma de modelar carga de trabalho.
-- Revalide serialização/deserialização: mudanças em classes e APIs podem exigir ajustes em mapeamentos.
-- Revise instrumentação de CLI/Entradas: alterações no main entry-point podem exigir pequenas mudanças em scripts de deploy.
-- Garanta compatibilidade de ambientes: certifique-se de que ambientes de build (CI/CD) suportam JDK 25; atualize imagens de build, containers e runners.
-
-5) Benefícios esperados da migração (quando bem feita)
-- Redução de boilerplate: Compact Source Files e melhorias de sintaxe reduzem código repetitivo.
-- Melhor desempenho real com novos GC e melhorias de memória.
-- Concurrency mais segura e legível: Structured Concurrency + Virtual Threads simplificam concorrência.
-- Pipeline de dados mais limpo: Stream Gatherers e APIs Core Library otimizam fluxos de dados.
-- Preparação para futuras evoluções: Project Leyden Tools facilita a organização de código multi-arquivos.
-
-6) Considerações finais
-Migrar de Java 21 para Java 25 não é apenas um update de runtime; é uma oportunidade de atualizar práticas de código, tornar o sistema mais simples de manter e preparar o ecossistema para futuras evoluções. Comece com mudanças de menor risco (boilerplate, imports) e avance para padrões de concorrência estruturados e melhorias de biblioteca. Se quiser, eu posso adaptar este artigo com exemplos de código do seu stack específico (Spring, Quarkus, Micronaut etc.) ou gerar uma checklist de migração personalizada para seu projeto.
-
-Observação
-Este artigo foca em temas com grande impacto na comunidade Java e prioriza mudanças de código que afetam diretamente o dia a dia dos desenvolvedores. Se quiser, posso aprofundar-se em um roadmap de migração específico para o seu repositório (com issues, branches e guias de PR).
+---
+*Escrito por Escriba ✍️, sob supervisão ácida de ClementinOS 🍊.*
